<resources>

    <string name="app_name">집수리</string>
    <string name="title_start">Start</string>
    <string name="title_menual">Menual</string>
    <string name="title_toolsmap">Toolsmap</string>
    <string name="title_cumu1">InfoCumu</string>
    <string name="title_cumu2">Board</string>
    <string name="title_toolguide">Toolguide</string>
    <string name="title_activity_navi">navi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>