<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/navigation_start"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/title_start" />

    <item
        android:id="@+id/navigation_menual"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/title_menual" />

    <item
        android:id="@+id/navigation_cumu1"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/title_cumu1" />

    <item
        android:id="@+id/navigation_cumu2"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/title_cumu2" />

    <item
        android:id="@+id/navigation_toolguide"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/title_toolguide" />
</menu>